# mosim

./: .clang-format  .gitignore  .gitmodules  README.md  build_config.h.in  meson.build
assets/shaders/: 2d_fragment.glsl  2d_vertex.glsl  compute_marching_cubes.glsl  fragment.glsl  mc_geom.glsl  mc_vertex.glsl  orbital_fragment.glsl  orbital_geom.glsl  render_cloud_compute.glsl  vertex.glsl
examples/: diborane.json  he.json  heh.json  hf2.json  methyllithium.json
examples/diatomics/: ch.json  cl2.json  cn.json  co.json  f2.json  h2.json  hf.json  n2.json  no.json  o2.json
examples/metal/: cu.json
examples/orgo/: acetylene.json  benzene.json  butadiene.json  carbon_tet.json  ch4.json  chloroform.json  cubane.json  cyclopropane.json  dcm.json  diazomethane.json  ethane.json  ethylene.json  formaldehyde.json  formic_acid.json  furan.json  methanol.json  methyl_chloride.json  perflcubane.json  perflcubane_minus.json  proline.json  pyridine.json  pyrrole.json
examples/prebuilt/: perflcubane_minus.json
examples/simple/: co2.json  h2o.json  h2o2.json  n2h4.json  n2o.json  n2oh.json  nh3.json  no2.json
include/: fps.h  keybind.h  platform_dep.h  resources.h  singleton.h  solve_in_thread.h  ui_config.h  util.h
include/gl/: 2dui.h  2dui_builder.h  event.h  font.h  glstate.h  gltext.h  marching_cubes.h  marching_cubes_trigs.h  matrix.h  orbital_render.h  render.h  shader.h  vertex_buffer.h  window.h
include/hf/: basis.h  chem.h  gamma.h  hf.h  hf_setup.h  math_util.h
include/ui/: config_ui.h  electron_cloud_manager.h  molorb_display.h
pch/: pch.h
src/: init.cpp  keybind.cpp  main.cpp  resources.cpp
src/gl/: 2dui.cpp  event.cpp  font.cpp  init.cpp  marching_cubes.cpp  orbital_render.cpp  render.cpp  shader.cpp  window.cpp
src/hf/: basis.cpp  chem.cpp  hf.cpp  hf_setup.cpp
src/ui/: config_ui.cpp  electron_cloud_manager.cpp  molorb_display.cpp
